--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "node": "^21.2.0",
+    "nodemailer": "^6.9.9",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
