--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGOODB_URL = mongodb+srv://rodrigo17ifmt:jXbJqmDDUtXCF5SR@cluster0.izfec80.mongodb.net/
+MONGOODB_URL = mongodb+srv://foryouentregas:34CCQ2RXQHFi6F38@cluster0.dz5xnii.mongodb.net/
+
 # foryouentregassistem
 SECRET_KEY_JWT = f7809042bbda3945531d25252038fdbc
