--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-MONGOODB_URL = mongodb+srv://foryouentregas:34CCQ2RXQHFi6F38@cluster0.dz5xnii.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+MONGOODB_URL = mongodb+srv://foryouentregas:34CCQ2RXQHFi6F38@cluster0.dz5xnii.mongodb.net/
 # foryouentregassistem
 SECRET_KEY_JWT = f7809042bbda3945531d25252038fdbc
