--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGOODB_URL = mongodb+srv://foryouentregas:34CCQ2RXQHFi6F38@cluster0.dz5xnii.mongodb.net/
-# foryouentregassistem
+
+# foryouentregassistem <- key
 SECRET_KEY_JWT = f7809042bbda3945531d25252038fdbc
