--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGOODB_URL = mongodb+srv://foryouentregas:34CCQ2RXQHFi6F38@cluster0.dz5xnii.mongodb.net/
+MONGOODB_URL = mongodb+srv://foryouentregas:AqfLycBe1ZgkCHaT@cluster0.sp1iuwh.mongodb.net/
 
 # foryouentregassistem <- key
 SECRET_KEY_JWT = f7809042bbda3945531d25252038fdbc
