--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ MONGOODB_URL = mongodb+srv://foryouentregas:556jWrq0PPzHQSaW@cluster0.vuo96mw.mo
 
 # foryouentregassistem <- key
 SECRET_KEY_JWT = f7809042bbda3945531d25252038fdbc
+
+MP_ACCESS_TOKEN = TEST-554794822022912-121220-83f56d26433dd9a647ba998b9e460442-431766912
+MP_PUBLIC_KEY = TEST-f9bf77bd-0a9d-49c8-8aa6-8fec8d8c1317
+
+MP_ACESS_PLAN = 2c93808493b072d70193c26d574406d8
