--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "node": "^21.2.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.9",
     "swagger-ui-express": "^5.0.0"
   },
